syntax = "proto3";
package ninjapanda.v1;
option  go_package = "ninjapanda.v1";

message MapFieldEntry {
    string          key    = 1;
    repeated string values = 2;
}
